# edictum-schemas

./: .docs-style-guide.md  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package.json  pyproject.toml
.github/: review-instructions.md  review-template.md
.github/workflows/: ci.yml  notify-docs.yml  pr-title.yml  review.yml
fixtures/: README.md
fixtures/adversarial/: condition-bypass.adversarial.yaml  expression-abuse.adversarial.yaml  input-injection.adversarial.yaml  sandbox-escape.adversarial.yaml  tool-name-bypass.adversarial.yaml
fixtures/behavioral/: approval-flows.fixtures.yaml  approval-timeout.fixtures.yaml  bundle-composition.fixtures.yaml  expressions.fixtures.yaml  observe-mode.fixtures.yaml  operators.fixtures.yaml  postcondition-deny.fixtures.yaml  postcondition-redact.fixtures.yaml  postcondition-warn.fixtures.yaml  precondition-allow.fixtures.yaml  precondition-deny.fixtures.yaml  sandbox-command.fixtures.yaml  sandbox-domain.fixtures.yaml  sandbox-multi-tool.fixtures.yaml  sandbox-path.fixtures.yaml  selectors.fixtures.yaml  session-advanced.fixtures.yaml  session-limits.fixtures.yaml  tags-metadata.fixtures.yaml  tool-definitions.fixtures.yaml  wildcard-matching.fixtures.yaml
fixtures/rejection/: constraints.rejection.yaml  contract-structure.rejection.yaml  effect-enums.rejection.yaml  expression-shapes.rejection.yaml  required-fields.rejection.yaml
fixtures/workflow-adapter-conformance/: README.md  (+1 more)
schemas/: edictum-v1.schema.json  edictum-v2.schema.json
scripts/: rename-fixtures.py
tests/: test_schema_valid.py
(+10 files in other folders)
