[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edictum-schemas"
version = "0.1.0b1"
description = "Shared JSON Schema for Edictum rulesets"
license = "MIT"
requires-python = ">=3.11"
keywords = ["edictum", "schema", "json-schema", "ruleset", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/edictum-ai/edictum-schemas"

[tool.hatch.build.targets.wheel]
packages = ["src/edictum_schemas"]

[tool.hatch.build.targets.wheel.shared-data]
"schemas" = "edictum_schemas/schemas"

[tool.hatch.build.targets.sdist]
include = ["src/edictum_schemas", "schemas"]
